@@ -13,7 +13,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
@@ -35,14 +34,22 @@ import org.opentripplanner.transit.model.site.StopLocation;
 import org.opentripplanner.util.lang.ToStringBuilder;
 
 /**
- * This creates a graph with trip patterns S0 - V0 | S11 - V11 --------> V21 - S21 |     \ S12 - V12
- * ----> V22 - V22
+ * This creates a graph with trip patterns
+ <pre>
+  S0 -  V0 ------------
+        |     \       |
+ S11 - V11 --------> V21 - S21
+        |      \      |
+ S12 - V12 --------> V22 - V22
+        |             |
+ S13 - V13 --------> V23 - V23
+ </pre>
  */
 class DirectTransferGeneratorTest extends GraphRoutingTest {
 
   private static final Duration MAX_TRANSFER_DURATION = Duration.ofSeconds(3600);
-  private TransitStopVertex S0, S11, S12, S21, S22;
-  private StreetVertex V0, V11, V12, V21, V22;
+  private TransitStopVertex S0, S11, S12, S13, S21, S22, S23;
+  private StreetVertex V0, V11, V12, V13, V21, V22, V23;
 
   @Test
   public void testDirectTransfersWithoutPatterns() {
@@ -91,8 +98,47 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
       tr(S0, 935, S21),
       tr(S11, 751, S21),
       tr(S12, 751, S22),
+      tr(S13, 2224, S12),
+      tr(S13, 2347, S22),
       tr(S21, 751, S11),
-      tr(S22, 751, S12)
+      tr(S22, 751, S12),
+      tr(S23, 2347, S12),
+      tr(S23, 2224, S22)
+    );
+  }
+
+  @Test
+  public void testDirectTransfersWithRestrictedPatterns() {
+    var otpModel = model(true, true);
+    var graph = otpModel.graph();
+    graph.hasStreets = false;
+    var transitModel = otpModel.transitModel();
+    var transferRequests = List.of(
+      new RoutingRequest(RequestModes.of().withTransferMode(StreetMode.WALK).build())
+    );
+
+    new DirectTransferGenerator(
+      graph,
+      transitModel,
+      noopIssueStore(),
+      MAX_TRANSFER_DURATION,
+      transferRequests
+    )
+      .buildGraph();
+
+    assertTransfers(
+      transitModel.getAllPathTransfers(),
+      tr(S0, 2780, S12),
+      tr(S0, 935, S21),
+      tr(S11, 2224, S12),
+      tr(S11, 751, S21),
+      tr(S12, 751, S22),
+      tr(S13, 2224, S12),
+      tr(S13, 2347, S22),
+      tr(S21, 2347, S12),
+      tr(S22, 751, S12),
+      tr(S23, 2347, S12),
+      tr(S23, 2224, S22)
     );
   }
 
@@ -202,6 +248,10 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
   }
 
   private TestOtpModel model(boolean addPatterns) {
+    return model(addPatterns, false);
+  }
+
+  private TestOtpModel model(boolean addPatterns, boolean withBoardingConstraint) {
     return modelOf(
       new Builder() {
         @Override
@@ -209,20 +259,26 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
           S0 = stop("S0", 47.495, 19.001);
           S11 = stop("S11", 47.500, 19.001);
           S12 = stop("S12", 47.520, 19.001);
+          S13 = stop("S13", 47.540, 19.001);
           S21 = stop("S21", 47.500, 19.011);
           S22 = stop("S22", 47.520, 19.011);
+          S23 = stop("S23", 47.540, 19.011);
 
           V0 = intersection("V0", 47.495, 19.000);
           V11 = intersection("V11", 47.500, 19.000);
           V12 = intersection("V12", 47.510, 19.000);
+          V13 = intersection("V13", 47.520, 19.000);
           V21 = intersection("V21", 47.500, 19.010);
           V22 = intersection("V22", 47.510, 19.010);
+          V23 = intersection("V23", 47.520, 19.010);
 
           biLink(V0, S0);
           biLink(V11, S11);
           biLink(V12, S12);
+          biLink(V13, S13);
           biLink(V21, S21);
           biLink(V22, S22);
+          biLink(V23, S23);
 
           street(V0, V11, 100, StreetTraversalPermission.ALL);
           street(V0, V12, 200, StreetTraversalPermission.ALL);
@@ -230,7 +286,9 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
           street(V0, V22, 200, StreetTraversalPermission.ALL);
 
           street(V11, V12, 100, StreetTraversalPermission.PEDESTRIAN);
+          street(V12, V13, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V21, V22, 100, StreetTraversalPermission.PEDESTRIAN);
+          street(V22, V23, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V11, V21, 100, StreetTraversalPermission.PEDESTRIAN);
           street(V11, V22, 110, StreetTraversalPermission.PEDESTRIAN_AND_BICYCLE);
 
@@ -241,7 +299,9 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
               TripPattern
                 .of(TransitModelForTest.id("TP1"))
                 .withRoute(route("R1", TransitMode.BUS, agency))
-                .withStopPattern(new StopPattern(List.of(st(S11), st(S12))))
+                .withStopPattern(
+                  new StopPattern(List.of(st(S11, !withBoardingConstraint, true), st(S12), st(S13)))
+                )
                 .build()
             );
 
@@ -249,7 +309,7 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
               TripPattern
                 .of(TransitModelForTest.id("TP2"))
                 .withRoute(route("R2", TransitMode.BUS, agency))
-                .withStopPattern(new StopPattern(List.of(st(S21), st(S22))))
+                .withStopPattern(new StopPattern(List.of(st(S21), st(S22), st(S23))))
                 .build()
             );
           }
@@ -346,7 +406,7 @@ class DirectTransferGeneratorTest extends GraphRoutingTest {
           .stream()
           .map(Edge::getToVertex)
           .filter(StreetVertex.class::isInstance)
-          .collect(Collectors.toList());
+          .toList();
 
         return (
           distanceMeters == transfer.getDistanceMeters() &&
